fix: improve HTML structure and formatting for better readability

--- a/html-css/Alura/Repositorio/style.css
+++ b/html-css/Alura/Repositorio/style.css
@@ -2,16 +2,17 @@
     margin: 0;
     padding: 0;
 }
-.apresentacao{
-    display: flex;
-    align-items: center;
-}
 body{
     height: 100vh;
     box-sizing: border-box;
-    width: 100vw;
     background-color: #0A0908;
     color: #E2E2E2;
+}
+.apresentacao{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    margin: 8%;
 }
 .titulo-destaque{
     color: #22D4FD ;
@@ -19,5 +20,5 @@ body{
 .links{
     background-color: #0d5666;
     color: #E2E2E2;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
